--- a/module_12/04_Point-Form_Style.html
+++ b/module_12/04_Point-Form_Style.html
@@ -28,7 +28,7 @@
   <div class="container-fluid">
 
 <!-- Header Area -->
-<header id="main01">
+<header id="reflection">
     <div class="row">
       <div class="col-sm-12 prime-bg header z-depth-1-half">
 				<div class="headerMod accent-4"></div>
