--- a/module_12/04_Point-Form_Style.html
+++ b/module_12/04_Point-Form_Style.html
@@ -285,7 +285,7 @@
               <p>The first letter of the first word from the source can be changed to an upper or lower
                 case letter to fit your sentence.</p>
               <div class="row">
-                <div class="col-xs-12 col-sm-7">
+                <div class="col-xs-12 col-sm-8">
                   <div class="card card-block z-depth-1-half prime-bg text-white p-3">
                     <h5><strong>Paragraph Outline</strong></h5>
 					<p>Topic sentence: Living close to work has many advantages.<br>
@@ -328,10 +328,10 @@
                  Concluding sentence: Living close to home can actually make a big difference, for individuals and for the earth</p>
                   </div>
                 </div>
-                <div class="col-xs-12 col-sm-5">
-					<div class="well z-depth-1-half p-3">
+                <div class="col-xs-12 col-sm-4">
+					<div class="well z-depth-1-half pr-3 pl-3 pt-3 pb-0">
                     <h5><strong>Full Paragraph</strong></h5>
-                    <p>Working close to home offers many advantages compared to living far from work. First, it is better financially. A shorter commute will reduce the amount of money a person is likely to spend on gas, <strong>which can cost the average Canadian driver almost $2000 per year</strong> (CAA, 2016, “Car costs”). A shorter commute would also help drivers reduce the cost of regular maintenance and avoid larger repairs due to wear-and-tear or collisions. Secondly, living close to work can encourage people to live a healthier lifestyle because it provides them with more opportunities to walk or ride a bicycle to work.<br><strong>According to a recent study, swapping the car for a bike can dramatically reduce a person’s chance of dying from major illnesses like heart disease and cancer</strong>  (Gill & Cellis-Morales, 2017, paras. 8-11). In addition to these personal benefits, people can also help to reduce air pollution when they live close enough to work that they can leave their car behind: <strong>commuting to work by public transit, for example, produces 65% less greenhouse gas emissions than the same trip taken by car</strong>. Clearly, moving closer to work is about more than just convenience. Instead, it’s a move that could have positive implications for the entire planet, as well for our bodies and our wallets</p>
+                    <p>Working close to home offers many advantages compared to living far from work. First, it is better financially. A shorter commute will reduce the amount of money a person is likely to spend on gas, <strong>which can cost the average Canadian driver almost $2000 per year</strong> (CAA, 2016, “Car costs”). A shorter commute would also help drivers reduce the cost of regular maintenance and avoid larger repairs due to wear-and-tear or collisions. Secondly, living close to work can encourage people to live a healthier lifestyle because it provides them with more opportunities to walk or ride a bicycle to work.<strong>According to a recent study, swapping the car for a bike can dramatically reduce a person’s chance of dying from major illnesses like heart disease and cancer</strong>  (Gill & Cellis-Morales, 2017, paras. 8-11). In addition to these personal benefits, people can also help to reduce air pollution when they live close enough to work that they can leave their car behind: <strong>commuting to work by public transit, for example, produces 65% less greenhouse gas emissions than the same trip taken by car</strong>. Clearly, moving closer to work is about more than just convenience. Instead, it’s a move that could have positive implications for the entire planet, as well for our bodies and our wallets</p>
                   </div>
                 </div>
               </div>
@@ -373,16 +373,5 @@
 
 <!-- OLC Custom JS --> 
 <script src="../js/plugins/olc-custom.js"></script> 
-
-<!-- Popover JS -->
-	<script src="../js/popper.min.js"></script>
-
-<!-- custom script for popovers -->
-<script>
-	$(function () {
-  $('[data-toggle="popover"]').popover();
-	})
-</script>
-
 </body>
 </html>
