add missing content

--- a/module_12/03_outline_research.html
+++ b/module_12/03_outline_research.html
@@ -69,7 +69,20 @@
       </div>
       <!--/.Accordion wrapper-->
       <div class="card-block blue lighten-5 p-3 mt-3">
-      -
+      <h3 style="text-align: center;">A. Reasons Krispy Kreme’s First expansion into Canada Failed</h3>
+      <h4>Reason #1: High Costs</h4>
+      <p><strong>Topic Sentence:</strong> Krispy Kreme’s First attempt to expand into Canada failed due to unexpectedly high costs<br>
+      <strong>Explanation, proof, or example:</strong><ul>
+      	<li>Stores were too expensive to operate &rarr; high upkeep and real estate costs</li>
+      	<li>Stores were too big &rarr; around 5000 square feet each (Harris, 2016)</li>
+      	<li>Stores were too expensive &rarr; cost up to 2-3 million dollars to open (Shaw, 2016).</li>
+      </ul></p>
+      <h4>Reason #2: Poor Sales</h4>
+      <p><strong>Topic Sentence:</strong> Krispy Kreme’s first attempt to expand into Canada failed due to sales peaking early, resulting in overproduction amid rapid expansion.<br>
+      <strong>Explanation, proof, or example:</strong><ul>
+      	<li>Sales of donuts were high at beginning &rarr; not enough to justify costs over time (Wright, 2017). </li>
+      	<li>Sales declined after its first few years in Canada.</li>
+      </ul></p>
       <h4>Reason #3: Misunderstanding of the Market</h4>
       <p><strong>Topic Sentence:</strong> Krispy Kreme’s First attempt to expand into Canada failed due to a poor understanding of the Canadian market.<br>
       <strong>Explanation, proof, or example:</strong><ul>
