--- a/module_12/09_summary.html
+++ b/module_12/09_summary.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Week 13: Summary</title>
+<title>Week 12: Summary</title>
 
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -26,28 +26,30 @@
       <div class="col-xs-12 col-sm-12">
 				<div class="view hm-black-light"> <img src="images/summary.jpg" class="img-fluid" alt=""><div class="mask"></div> </div>
        <div class="col-xs-12 col-sm-12 col-md-4 accent-4 summary-title z-depth-1 animated slideInLeft">
-					<p class="heading animated fadeIn black-text">Completing the Research Process &mdash; Part 1</p>
+					<p class="heading animated fadeIn black-text">Organizing Research &mdash; Part 2</p>
          <hr class="accent-3" />
 				</div>
         <div class="col-xs-12 col-sm-12 col-md-7 summary z-depth-1 animated slideInRight bg-white">
           <div class="animated fadeIn text-bold p-3">
-          <h1 class="h1-responsive text-accent-3 animated fadeIn mt-3">Week 13 Summary</h1>
-       <p>This week, we focused on the revision process by breaking it down into three important stages.</p>
-       <p><span class="badge accent-3 pull-left mr-2">1</span> <strong>Revising:</strong> This stage looks at the organization of the paper as a whole.<ul>
-		   <li>Is there enough support for each point?</li>
-           <li>Does every main point relate back to the controlling idea or thesis introduced in the introduction?</li>
-           <li>Would the points of support be more effective if presented in a different order?</li>
+          <h1 class="h1-responsive text-accent-3 animated fadeIn mt-3">Week 12 Summary</h1>
+       <p>This week we took an in-depth look at comprehensive outlines, which include specific support in the form of references to your research sources.</p>
+       <p>An effective comprehensive outline has the following components:</p>
+       <p><span class="badge accent-3 pull-left mr-2">1</span> Headings that clearly identify the different parts of the paper</p>
+       <p><span class="badge accent-3 pull-left mr-2">2</span> Point form lists of supports for each body paragraph.  Point form writing is<ul>
+		   <li>condensed, perhaps even using abbreviations and symbols</li>
+           <li>parallel</li>
+           <li>bulleted or numbered</li>
        </ul></p>
-       <p><span class="badge accent-3 pull-left mr-2">2</span> <strong>Editing:</strong> This stage looks at the individual sentences.<ul>
-		   <li>Is every sentence clear?  </li>
-           <li>Is there enough sentence variety?</li>
-           <li>Are the important ideas emphasized by the position and wording of the sentences they are in?</li>
+       <p><span class="badge accent-3 pull-left mr-2">3</span> References to research sources that have been chosen to provide the right type of evidence to support each point</p>
+       <p><span class="badge accent-3 pull-left mr-2">4</span> An introduction that provides a thesis statement as well as<ul>
+		   <li>any necessary definitions</li>
+           <li>some background information</li>
+           <li>reasons why the reader should care about the topic</li>
        </ul></p>
-       <p><span class="badge accent-3 pull-left mr-2">3</span> <strong>Proofreading:</strong> This final stage is a last check for grammar, punctuation, and spelling errors. Don't rely on your software program to catch all your errors. Try the following:<ul>
-		   <li>Leave time between your editing stage and proofreading stage to let your brain forget what it thinks it knows is on the page.</li>
-           <li>Read your paper out loud.</li>
-           <li>Read from the bottom to the top, one sentence at a time.</li>
-           <li>Check for commonly confused words that spellcheck would not catch.</li>
+        <p><span class="badge accent-3 pull-left mr-2">5</span> A conclusion that summarizes key points but also <ul>
+		   <li>discusses the implications of this information</li>
+           <li>suggests how the information can be used</li>
+           <li>identifies questions that need more research</li>
        </ul></p>
         </div>
       </div>
