--- a/module_12/11_eval.html
+++ b/module_12/11_eval.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Assignment: Research Project Part 3: Final Draft</title>
+<title>Assignment: Research Project Part 2: Comprehensive Outline</title>
 
 <!-- Font Awesome -->
 <link rel="stylesheet" href="../font/fontawesome/css/fontawesome-pro-brands.css">
@@ -32,7 +32,7 @@
     <div class="row">
       <div class="col-sm-12 prime-bg header z-depth-1-half">
 				<div class="headerMod"></div>
-        <p class="animated fadeIn">Completing the Research Process &mdash; Part 1</p>
+        <p class="animated fadeIn">Organizing Research &mdash; Part 2</p>
       </div>
     </div>
 </header>
@@ -41,47 +41,42 @@
 <!-- Main Content Area -->
 <main>
     <div class="col-sm-12 content">
-			<h1><i class="fal fa-laptop fa-lg text-second fa-pull-left" aria-hidden="true"></i><span class="sr-only">Assignment:</span> Research Project Part 3: Final Draft</h1>
-			<p><strong>Due Date:</strong> Last day of week 13, 11:55 p.m. See Calendar or Instructional Plan.<br>
-				<strong>Value of Assignment:</strong> 20% of final grade<br>
+			<h1><i class="fal fa-laptop fa-lg text-second fa-pull-left" aria-hidden="true"></i><span class="sr-only">Assignment:</span> Research Project Part 2: Comprehensive Outline</h1>
+			<p><strong>Due Date:</strong> Last day of week 12, 11:55 p.m. See Calendar or Instructional Plan.<br>
+				<strong>Value of Assignment:</strong> 5% of final grade<br>
 				<strong>Passing Grade:</strong> 55%<br>
-				<strong>Length:</strong> Approximately 1100-1200 words<br>
-				<strong>Submission Instructions:</strong> Submit your work as a .doc/.docx or .pdf file to the assignment submission folder titled “Research Project Part 3 – Final Draft”. Please do not submit your work as a zipped folder.<br>
-     			<strong>Evaluation:</strong> See below for details.</p>
-     			<p>This assignment is an opportunity for you to write the report that expresses your answer to the research question you set for yourself.<br>
-     			This is an individual assignment.</p>
+				<strong>Length:</strong> As long as is required to fill in the template to clearly express your ideas<br>
+				<strong>Submission Instructions:</strong> Submit your work as a .doc/.docx or .pdf file to the assignment submission folder titled “Research Project Part 2 – Comprehensive Outline”. Please do not submit your work as a zipped folder.<br>
+     			<strong>Evaluation:</strong> This is an individual assignment. See below for details.</p>
+     			<p>This assignment is an opportunity for you to organize your ideas and supporting research for your research project.</p>
       <div class="clearfix"></div>
       <div class="row mt-3">
       <div class="col col-sm-6 info-color z-depth-1 p-4 mb-4" id="rationale" style="max-height: 400px;">
 				<h2 class="text-prime">Rationale</h2>
-				<p>Your purpose in this task is to complete your research project, which will include:</p>
+				<p>Your purpose in this task is to develop a comprehensive outline of your research paper, which will include</p>
 				<ul>
-					<li>Employing critical thinking to analyse source, voice, bias, meaning, argument, and evidence</li>
+					<li>Employing critical thinking to analyse source, voice, bias, meaning, argument, and evidence </li>
 					<li>Applying the three-step process (plan, write, revise) to create a variety of academic and workplace documents</li>
-					<li>Applying knowledge of standard Canadian English Grammar, spelling, and punctuation to academic and professional writing</li>
+					<li>Integrating sources using appropriate documentation format</li>
 				</ul>
 				</div>
 				<div class="col col-sm-6 accent-4 z-depth-1 p-4 mb-4" id="evaluation">
 				<h2 class="text-prime">Evaluation</h2>
-				<p  class="text-bold">The rubric for assessing this assignment is here <a href="" title="" target="_blank">(quicklink to pdf or Word document).<i class="far fa fa-external-link" aria-hidden="true"></i></a></p>
+				<p  class="text-bold">The rubric for assessing this assignment is here <a href="" title="" target="_blank">(quicklink to pdf or Word document)<i class="far fa fa-external-link" aria-hidden="true"></i></a>.</p>
 				<p  class="text-bold">The policy for late submission of student work can be found in the Course Information module in this course.</p>
 				</div>
 				<div class="col col-sm-12 z-depth-1 p-4" id="directions">
 					<h2 class="text-prime">Directions</h2>
 					<ol>
-				        <p><span class="circle-number accent-2 pull-left mr-2 mt-1" >1</span>Based on the topic you had approved for your proposal assignment and using the comprehensive outline you have already created, write a report that expresses your answer to the research question you set for yourself.</p>
-						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">2</span>Consider the purpose and audience you identified in your proposal. What information needs to be included? What strategies will suit your topic best?</p>
-						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">3</span>Once you have finished planning your paper, write a draft, revise it for organization and content, proofread it for mechanics and grammar, and then submit it to the appropriate eConestoga drop box for an originality check to ensure the documentation and paraphrasing are correct.</p>
-						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">4</span>Double-check your paper using the checklist provided<a>insert quicklink to topic page: Checklist for Research Paper<i class="far fa fa-external-link" aria-hidden="true"></i></a></p>
-						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">5</span>Use APA@Conestoga format for your paper:<br>
+				        <p><span class="circle-number accent-2 pull-left mr-2 mt-1" >1</span>Review the outline template from <a href="">insert quicklink to topic: Organizing Your Research<i class="far fa fa-external-link" aria-hidden="true"></i></a></p>
+						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">2</span>Think about how your ideas would fit most effectively into the template, remembering that you can have more than three main points if your topic requires.</p>
+						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">3</span>Fill out the outline <a href="">insert quicklink to topic: Organizing Your Research<i class="far fa fa-external-link" aria-hidden="true"></i></a> with your ideas and supporting research – that is, the sources you will use as support in each section
 						<ul>
-							<li>Use 12-point Arial font.</li>
-							<li>Double space your analysis.</li>
-							<li>Include a title page according to <a href="https://apa.conestogac.on.ca/Sections/PaperFormat#title-page">this format from The Learning Commons</a>.</li>
-							<li>Include a Reference Page following APA@Conestoga documentation style.</li>
-							<li><strong>Remember!</strong> Cite your sources using both in-text citations and a References page.</li>
-							</ul></p>
-						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">6</span>Revise your paper to ensure it reads clearly and that it follows the rubric and the assignment instructions.</p>
+						<li>Only your thesis statement needs to be a complete sentence at this point. The rest of the outline can be filled in with key phrases that make your ideas and organization clear. Save your paragraphs for the first draft.</li>
+						<li>Use 12-point Arial font.</li>
+						</ul></p>
+						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">4</span>Include in-text citations and a references list in APA@Conestoga format.</p>
+						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">5</span>Revise your outline to ensure it reads clearly and that it follows the rubric, the assignment instructions, and the resources provided in eConestoga in weeks 11 and 12.</p>
 					</ol>
 				</div>
 			</div>
