--- a/module_11/04_purpose_outline.html
+++ b/module_11/04_purpose_outline.html
@@ -45,7 +45,7 @@
        <div class="row mt-3 mb-3">
         <!--Card Primary-->
         <div class="col-xs-6 col-sm-6">
-			<div class="card pink text-white z-depth-2 p-3">
+			<div class="card pink text-white z-depth-2 p-3" style="height: 360px;">
 			  <div class="card-block">
 				<p><strong>Preparing an outline</strong>
 				<ul>
@@ -60,7 +60,7 @@
         
         <!--/.Card Primary-->
         <div class="col-xs-6 col-sm-6">
-			<div class="card accent-4 z-depth-2 p-3" style="height: 368px;">
+			<div class="card accent-4 z-depth-2 p-3" style="height: 360px;">
 			  <div class="card-block">
 				<p><strong>Writing a first draft</strong>
 				<ul>
