inline quiz json html

--- a/module_11/11_inline_quiz.html
+++ b/module_11/11_inline_quiz.html
@@ -39,12 +39,17 @@
   <main>
     <div class="col-sm-12 content">
       <h1><i class="fal fa-question-circle fa-lg text-second fa-pull-left" aria-hidden="true"></i><span class="sr-only">Knowledge Check: </span>Punctuation Summary Exercise </h1>
-      <p>As you read the following paragraphs, look for incorrect uses of punctuation. You should be able to find one example of each of the following:<ul>
-      	<li>Misuse of an apostrophe</li>
-      	<li>Misuse of a comma</li>
-      	<li>Misuse of a semicolon</li>
-      	<li>Misuse of a colon</li>
-      </ul></p>
+      <div class="well p-3 mt-4 mb-4 z-depth-1">
+      <p>As you read the following paragraphs, look for incorrect uses of punctuation. You should be able to find one example of each of the following:</p>
+      <p><span class="badge accent-3" style="margin-right: 5px;">1</span> Misuse of an apostrophe<br>
+        <span class="badge accent-3" style="margin-right: 5px;">2</span> Misuse of a comma<br>
+        <span class="badge accent-3" style="margin-right: 5px;">3</span> Misuse of a semicolon<br>
+        <span class="badge accent-3" style="margin-right: 5px;">4</span> Misuse of a colon</p>
+        <p><strong>1.</strong> Facebook’s new system works by allowing apps or web sites to store an account recovery “token” on Facebook’s servers. <strong>2.</strong> When a user turns the feature on the service pushes that token to Facebook via the user’s browser in an HTTPS-encrypted connection. <strong>3.</strong> From then on, if at any point the user forgets his or her password, or loses a device used for two-factor authentication, they can retrieve the token by proving their identity to Facebook, and then use it to recover access to the account they were locked out of.</p>
+      <p><strong>4.</strong> Facebook’s identity-proving process uses more than just a password. <strong>5.</strong> It can require inputting a temporary code texted to the user’s phone, checking that the token’s being retrieved from a known device in a familiar location, and even requiring the person to fill out Facebook’s so-called <a href="https://www.fastcompany.com/1721030/facebook-gets-serious-about-security-intros-all-secure-connection-social-captchas?">Social CAPTCHA</a>, which requires them to identify pictures of friends within a time limit. <strong>6.</strong> “The idea is to leverage those indicators Facebook has and let you prove that you’re still you,” says Hill. <strong>7.</strong> “Account recovery isn’t something that happens every day, so it’s not a big deal to add a little friction to that process to keep it secure.”</p>
+      <p><strong>8.</strong> Like practically every action Facebook takes, Delegated Account Recovery will no doubt raise suspicions. <strong>9.</strong> Its possible to see it as an effort to gain a tighter hold of your online activities, or gather more data by spying on your linked accounts. <strong>10.</strong> But Hill says: Facebook designed the system to not let Facebook learn anything from the account recovery tokens other than which service a user has linked. <strong>11.</strong> The service encrypts the token so that only the partnered service, not Facebook; can identify the specific account being recovered.</p>
+	</div>
+  	 
    	<section id="dbox"></section>
     <div class="citation mt-5">
 				<p><strong>References:</strong><br>
@@ -82,7 +87,7 @@
       <script src="../facilitator_tools/Quiz/js/quiz.js"></script>
    	<script>
    		$(document).ready(function() {
-   			InlineQuizApp.setupQuiz("data/quiz-data_review_key_concepts.json", "dbox")
+   			InlineQuizApp.setupQuiz("data/inline_quiz_punctuation.json", "dbox")
    		});
    	</script>
       <noscript>This activity will only load in an online environment with JavaScript enabled.</noscript>
