update for colons

--- a/module_11/09_colons_semi-colons.html
+++ b/module_11/09_colons_semi-colons.html
@@ -43,9 +43,50 @@
         <p>“The semi-colon (;) also indicates a break in the flow of a sentence, but functions differently than a period or comma. When you encounter a semi-colon while reading aloud, this represents a good place to pause and take a break.” (Writing for Success, Chapter 3.2, “Semi-colons”)</p>
         <h3>Colon</h3>
         <p>Use a colon at the end of a complete statement to introduce any of the following:</p>
-        
+        <div class="row">
+        <div class="col-sm-10 card accent-4 p-3 mb-3" style="margin: auto;">
+        <ul style="list-style: none;">
+        	<li>
+        		<div class="col-sm-4 pull-left"><strong>A list</strong></div>
+        		<div class="col-sm-1 pull-left">&rarr;</div>
+        		<div class="col-sm-7 pull-right">I have three dogs: Mitzy, Fluffy, and Fred.</div>
+        	</li><br><br>
+        	<li>
+        		<div class="col-sm-4 pull-left"><strong>An explanation / example</strong></div>
+        		<div class="col-sm-1 pull-left">&rarr;</div>
+        		<div class="col-sm-7 pull-right">Here’s one way to spend less: only shop once a week.</div>
+        	</li><br><br>
+        	<li>
+        		<div class="col-sm-4 pull-left"><p><strong>A quotation</strong><br>Use a colon to introduce a quotation when you want to use a complete sentence to establish context for the quotation.</p></div>
+        		<div class="col-sm-1 pull-left">&rarr;</div>
+        		<div class="col-sm-7 pull-right">The stereotype of the Canadian experience can even be seen in the words of former Prime Minister Pierre Trudeau: “Canada is a country whose main exports are hockey players and cold fronts.”</div>
+        	</li>
+        </ul>
+        </div>
+        </div>
         <h3>Semi-colon</h3>
         <p>“Semi-colons separate things. Most commonly, they separate two main clauses that are closely related to each other but that could stand on their own as sentences if you wanted them to.” (Mignon Fogarty aka Grammar Girl, Semi-colons, <a href="http://www.quickanddirtytips.com/education/grammar/semicolons">“Use semi-colons to separate things and add variety”)</a></p>
+        <div class="row">
+        <div class="col-sm-10 card pink darken-2 text-white p-3" style="margin: auto;">
+        <ul style="list-style: none;">
+        	<li>
+        		<div class="col-sm-7 pull-left">To replace a period, a semi colon can appear between independent clauses that are closely related in meaning.</div>
+        		<div class="col-sm-1 pull-left">&rarr;</div>
+        		<div class="col-sm-4 pull-right">Mario was late; he missed his bus.</div>
+        	</li><br><br><br><br>
+        	<li>
+        		<div class="col-sm-7 pull-left">To be used before a transitional expression (such as <em>however, next, therefore, as a result</em>) that logically links two clauses</div>
+        		<div class="col-sm-1 pull-left">&rarr;</div>
+        		<div class="col-sm-4 pull-right">I’d like to help you; however, I’m late for class.</div>
+        	</li><br><br><br><br>
+        	<li>
+        		<div class="col-sm-7 pull-left"><p>To separate three or more items in a series if any of the items already contains commas (a COMPLEX LIST).</p></div>
+        		<div class="col-sm-1 pull-left">&rarr;</div>
+        		<div class="col-sm-4 pull-right">For a successful fishing trip, you need the right equipment, which need not be expensive; knowledge of fish habitat and habits; and, of course, hungry fish.</div>
+        	</li>
+        </ul>
+        </div>
+        </div>
        <div class="clearfix mt-5"></div>
         <div class="citation mt-5">
           <p><strong>Reference:</strong><br/>
