--- a/module_11/04_purpose_outline.html
+++ b/module_11/04_purpose_outline.html
@@ -74,7 +74,7 @@
         </div>
         <p>You can compare writing a paper to cooking. Before a professional chef begins to assemble a dish, they will first ensure that they have prepared all of the ingredients that they will need: laid out before them they will have the ingredients washed and cut and portioned so that the actual cooking consists mostly of combining the ingredients according to the directions.</p>
         <p>This preparation allows the chef to avoid costly interruptions. Imagine if they had to stop what they were doing so they could run to the market, buy a missing ingredient, and cut it into the appropriate size. It would certainly make for a less enjoyable cooking experience. It might also affect the quality of the dish, as the rest of the food sits waiting. Outlines do the same thing for writers.</p>
-        <div class="card light-blue accent-3 z-depth-2 p-3">
+        <div class="card blue darken-3 text-white z-depth-2 p-3">
 			  <div class="card-block">
 				<p><strong>Apply to the Job</strong><br>
 				Think about the role that preparation and planning plays in your professional life. 
