--- a/module_10/10_summary.html
+++ b/module_10/10_summary.html
@@ -36,14 +36,7 @@
        <p><span class="badge accent-3 pull-left mr-2">1</span> Choosing a topic:<ul>
 		   <li>Consider ways in which your personal interests and your field of study overlap</li>
            <li>Once a broad topic suggests itself, brainstorm, mapping topics and sub-topics to show potential connections</li>
-           <li>Frame your research goals as a question.  Make sure your question avoids the following pitfalls:<ul>
-           	<li>too broad</li>
-           	<li>too narrow</li>
-           	<li>closed</li>
-           	<li>subjective</li>
-           	<li>leading</li>
-           	<li>multiple</li>
-           </ul></li>
+           <li>Frame your research goals as a question.  Make sure your question avoids the following pitfalls:<ul><li>too broad; too narrow; closed; subjective; leading; multiple</li></ul></li>
        </ul></p>
        <p><span class="badge accent-3 pull-left mr-2">2</span> Planning the research:<br>An excellent way to make sure you have planned every aspect of your research is to write a proposal that describes what you will do.  This also allows your professor to give you helpful feedback to improve your research results.  A good proposal provides the following:<ul>
 		   <li>An informative subject line</li>
