fix some mistakes

--- a/module_12/04_Point-Form_Style.html
+++ b/module_12/04_Point-Form_Style.html
@@ -207,7 +207,7 @@
                 
                 <!--Content-->
                 <hr>
-                <p>That’s right. We can use arrows, colons, +/-, </> to indicate relationships between ideas</p>
+                <p>That’s right. We can use arrows, colons, +/-, </> to indicate relationships between ideas<br><br><br></p>
                 <hr>
                 <!--Triggering button-->
                 <a class="rotate-btn" data-card="card-4"><i class="fa fa-undo"></i> Click here to rotate back</a>
@@ -240,8 +240,7 @@
           <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne">
             <div class="card-block">
              <div class="row">
-                <div class="col-xs-12 col-sm-7">
-                  <div class="card card-block z-depth-1-half prime-bg text-white p-3">
+                <div class="col col-sm-7 prime-bg text-white z-depth-1 pr-3 pl-3 pt-3 pb-0 mb-3">
                     <h5><strong>Paragraph Outline</strong></h5>
 					<p>Topic sentence: Living close to work has many advantages<br>
 					<ol type="A">
@@ -259,13 +258,10 @@
 						<li>Concluding sentence: People should look for a job that’s close to home</li>
 					</ul></li>
 					</ol></p>
-                  </div>
                 </div>
-                <div class="col-xs-12 col-sm-5">
-					<div class="well z-depth-1-half p-3">
+                <div class="col col-sm-5 z-depth-1 pr-3 pl-3 pt-3 pb-0 mb-3">
                     <h5><strong>Full Paragraph</strong></h5>
                     <p>Working close to home offers many advantages compared to living far from work. First, it is <strong>better financially</strong>. A shorter commute will reduce the amount of money a person is likely to spend on <strong>gas and on car repairs</strong>. Secondly, living close to work is healthier for people. It provides them with more opportunities to walk or ride a bicycle to work, which are both <strong>great forms of exercise</strong>. Moreover, these forms of transportation are <strong>better for the environment</strong> than a lengthy car commute. In conclusion, the ideal job is the one that’s located close to home.</p>
-                  </div>
                 </div>
               </div>
               <p>The connections between the outline and the paragraph are clear, and the writer uses transitional words and phrases for coherence. However, the writer can make this a better paragraph by supporting the various claims with evidence from other sources. It has been indicated by <strong>bold type</strong> where the reader may need more detail in order to be persuaded by the writer’s argument.</p>
@@ -285,31 +281,30 @@
               <p>The first letter of the first word from the source can be changed to an upper or lower
                 case letter to fit your sentence.</p>
               <div class="row">
-                <div class="col-xs-12 col-sm-8">
-                  <div class="card card-block z-depth-1-half prime-bg text-white p-3">
+                <div class="col col-sm-7 prime-bg text-white z-depth-1 pr-3 pl-3 pt-3 pb-0 mb-3">
                     <h5><strong>Paragraph Outline</strong></h5>
 					<p>Topic sentence: Living close to work has many advantages.<br>
-					<ol type="A">
+					<ol class="m-0 pt-0" type="A" style="padding-left: 20px;">
 					<li>Financial benefits
-					<ul>
+					<ul class="pl-2">
 						<li>Spend less gas
-						<ul>
+						<ul class="pl-2">
 							<li>CAA estimates: $1700 per year on gas, compact car, 20,000 kms (Source: CAA.ca, “Car costs”)</li>
 						</ul></li>
 						<li>Spend less on car repairs
-						<ul>
+						<ul class="pl-2">
 							<li>Spend less on regular maintenance (engine oil, air filter, transmission fluid)</li>
 							<li>Plus avoid larger repairs due to wear-and-tear or collisions</li>
 						</ul></li>
 					</ul></li>
-					<li>Health benefits<ul>
+					<li>Health benefits<ul class="pl-2">
 						<li>People are more likely to walking or cycle to work if they live close</li>
 						<li>Both walking and cycling are healthier than commuting by car
-						<ul>
+						<ul class="pl-2">
 							<li>Regular daily exercise can improve health (source: J. Gill & C. Celis-Morales, “Cycling to work: major new study suggests health benefits are staggering”, The Conversation, April 19 2017, paras. 8-11)
-							<ul>
+							<ul class="pl-2">
 								<li>Cycling to work vs. car/ public transport
-								<ol>
+								<ol class="pl-2">
 									<li>52% lower risk of dying from heart disease </li>
 									<li>40% lower risk of dying from cancer</li>
 									<li>Lower risks of developing heart disease / cancer at all</li>
@@ -318,25 +313,22 @@
 							</ul></li>
 						</ul></li>
 					</ul></li>
-					<li>Environmental benefits<ul>
+					<li>Environmental benefits<ul class="pl-2">
 						<li>Alternative forms of transportation create less pollution than travelling by car
-						<ul>
+						<ul class="pl-2">
 							<li>Each trip: Transit riders &rarr; 65% less GHG emissions (Source: Canadian Urban Transit Association, Issue Paper #16: “Public Transit – A Climate Change Solution”, p. 2)</li>
 						</ul></li>
 					</ul></li>
 					</ol>
                  Concluding sentence: Living close to home can actually make a big difference, for individuals and for the earth</p>
-                  </div>
                 </div>
-                <div class="col-xs-12 col-sm-4">
-					<div class="well z-depth-1-half pr-3 pl-3 pt-3 pb-0">
+                <div class="col col-sm-5 z-depth-1 pr-3 pl-3 pt-3 pb-0 mb-3">
                     <h5><strong>Full Paragraph</strong></h5>
                     <p>Working close to home offers many advantages compared to living far from work. First, it is better financially. A shorter commute will reduce the amount of money a person is likely to spend on gas, <strong>which can cost the average Canadian driver almost $2000 per year</strong> (CAA, 2016, “Car costs”). A shorter commute would also help drivers reduce the cost of regular maintenance and avoid larger repairs due to wear-and-tear or collisions. Secondly, living close to work can encourage people to live a healthier lifestyle because it provides them with more opportunities to walk or ride a bicycle to work.<strong>According to a recent study, swapping the car for a bike can dramatically reduce a person’s chance of dying from major illnesses like heart disease and cancer</strong>  (Gill & Cellis-Morales, 2017, paras. 8-11). In addition to these personal benefits, people can also help to reduce air pollution when they live close enough to work that they can leave their car behind: <strong>commuting to work by public transit, for example, produces 65% less greenhouse gas emissions than the same trip taken by car</strong>. Clearly, moving closer to work is about more than just convenience. Instead, it’s a move that could have positive implications for the entire planet, as well for our bodies and our wallets</p>
                   </div>
                 </div>
               </div>
               <p>The primary advantage with adding depth to the outline and the full paragraph is to provide a more compelling argument for the reader to agree with your position. The added evidence is indicated by <strong>bold type</strong>. Since the writer uses evidence to back up their claims, they can draw a bolder conclusion than the basic example.</p>
-            </div>
           </div>
         </div>
        
