--- a/module_11/12_summary.html
+++ b/module_11/12_summary.html
@@ -32,18 +32,18 @@
         <div class="col-xs-12 col-sm-12 col-md-7 summary z-depth-1 animated slideInRight bg-white">
           <div class="animated fadeIn text-bold p-3">
           <h1 class="h1-responsive text-accent-3 animated fadeIn mt-3">Week 11 Summary</h1>
-       <p><span class="badge accent-3 pull-left mr-2">1</span> This week, we looked at the next stage of the research paper: the gathering and organizing of information.  The best tool for this stage is the outline. Creating an outline allows us to <ul>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">1</span> This week, we looked at the next stage of the research paper: the gathering and organizing of information.  The best tool for this stage is the outline. Creating an outline allows us to <ul>
 		   <li>find information</li>
            <li>evaluate ideas</li>
            <li>organize ideas</li>
        </ul></p>
-       <p><span class="badge accent-3 pull-left mr-2">2</span> In the outlining stage, we turn the research question into a thesis statement, or controlling idea.  As we organize our ideas, we create headings and sub-headings that show how the information is organized and how each section relates back to the thesis or controlling idea.  In a report, these headings and sub-headings can be used in the final draft to help your reader follow your organization more clearly.</p>
-       <p><span class="badge accent-3 pull-left mr-2">3</span> As you create your outline, you should decide what kind of report you are writing, as this will affect how you organize your information.<ul>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">2</span> In the outlining stage, we turn the research question into a thesis statement, or controlling idea.  As we organize our ideas, we create headings and sub-headings that show how the information is organized and how each section relates back to the thesis or controlling idea.  In a report, these headings and sub-headings can be used in the final draft to help your reader follow your organization more clearly.</p>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">3</span> As you create your outline, you should decide what kind of report you are writing, as this will affect how you organize your information.<ul>
 		   <li>Informational -- provides research information in way that makes it more accessible for the reader</li>
            <li>Analytic -- provides research information and then analyzes its significance for the reader</li>
            <li>Persuasive -- provides information and analysis for the purpose of persuading the reader to think or act in a specific way</li>
        </ul></p>
-        <p><span class="badge accent-3 pull-left mr-2">4</span> This week also included a review of punctuation: commas, colons, semi-colons, and apostrophes.</p>
+        <p><span class="badge accent-4 pull-left mr-2 black-text">4</span> This week also included a review of punctuation: commas, colons, semi-colons, and apostrophes.</p>
         </div>
       </div>
     </div>
