--- a/module_12/10_summary.html
+++ b/module_12/10_summary.html
@@ -34,19 +34,19 @@
           <h1 class="h1-responsive text-accent-3 animated fadeIn mt-3">Week 12 Summary</h1>
        <p>This week we took an in-depth look at comprehensive outlines, which include specific support in the form of references to your research sources.</p>
        <p>An effective comprehensive outline has the following components:</p>
-       <p><span class="badge accent-3 pull-left mr-2">1</span> Headings that clearly identify the different parts of the paper</p>
-       <p><span class="badge accent-3 pull-left mr-2">2</span> Point form lists of supports for each body paragraph.  Point form writing is<ul>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">1</span> Headings that clearly identify the different parts of the paper</p>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">2</span> Point form lists of supports for each body paragraph.  Point form writing is<ul>
 		   <li>condensed, perhaps even using abbreviations and symbols</li>
            <li>parallel</li>
            <li>bulleted or numbered</li>
        </ul></p>
-       <p><span class="badge accent-3 pull-left mr-2">3</span> References to research sources that have been chosen to provide the right type of evidence to support each point</p>
-       <p><span class="badge accent-3 pull-left mr-2">4</span> An introduction that provides a thesis statement as well as<ul>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">3</span> References to research sources that have been chosen to provide the right type of evidence to support each point</p>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">4</span> An introduction that provides a thesis statement as well as<ul>
 		   <li>any necessary definitions</li>
            <li>some background information</li>
            <li>reasons why the reader should care about the topic</li>
        </ul></p>
-        <p><span class="badge accent-3 pull-left mr-2">5</span> A conclusion that summarizes key points but also <ul>
+        <p><span class="badge accent-4 pull-left mr-2 black-text">5</span> A conclusion that summarizes key points but also <ul>
 		   <li>discusses the implications of this information</li>
            <li>suggests how the information can be used</li>
            <li>identifies questions that need more research</li>
