--- a/module_13/07_summary.html
+++ b/module_13/07_summary.html
@@ -33,17 +33,17 @@
           <div class="animated fadeIn text-bold p-3">
           <h1 class="h1-responsive text-accent-3 animated fadeIn mt-3">Week 13 Summary</h1>
        <p>This week, we focused on the revision process by breaking it down into three important stages.</p>
-       <p><span class="badge accent-3 pull-left mr-2">1</span> <strong>Revising:</strong> This stage looks at the organization of the paper as a whole.<ul>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">1</span> <strong>Revising:</strong> This stage looks at the organization of the paper as a whole.<ul>
 		   <li>Is there enough support for each point?</li>
            <li>Does every main point relate back to the controlling idea or thesis introduced in the introduction?</li>
            <li>Would the points of support be more effective if presented in a different order?</li>
        </ul></p>
-       <p><span class="badge accent-3 pull-left mr-2">2</span> <strong>Editing:</strong> This stage looks at the individual sentences.<ul>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">2</span> <strong>Editing:</strong> This stage looks at the individual sentences.<ul>
 		   <li>Is every sentence clear?  </li>
            <li>Is there enough sentence variety?</li>
            <li>Are the important ideas emphasized by the position and wording of the sentences they are in?</li>
        </ul></p>
-       <p><span class="badge accent-3 pull-left mr-2">3</span> <strong>Proofreading:</strong> This final stage is a last check for grammar, punctuation, and spelling errors. Don't rely on your software program to catch all your errors. Try the following:<ul>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">3</span> <strong>Proofreading:</strong> This final stage is a last check for grammar, punctuation, and spelling errors. Don't rely on your software program to catch all your errors. Try the following:<ul>
 		   <li>Leave time between your editing stage and proofreading stage to let your brain forget what it thinks it knows is on the page.</li>
            <li>Read your paper out loud.</li>
            <li>Read from the bottom to the top, one sentence at a time.</li>
