--- a/module_14/02_summary.html
+++ b/module_14/02_summary.html
@@ -33,14 +33,14 @@
           <div class="animated fadeIn text-bold p-3">
           <h1 class="h1-responsive text-accent-3 animated fadeIn mt-5">Week 14 Summary</h1>
        <p>This week, in preparation for the final assessment, we reviewed the main concepts taught in the course:</p>
-       <p><span class="badge accent-3 pull-left mr-2">1</span> Identifying purpose, audience, and thesis</p>
-       <p><span class="badge accent-3 pull-left mr-2">2</span> Paragraph development</p>
-       <p><span class="badge accent-3 pull-left mr-2">3</span> Types of support</p>
-       <p><span class="badge accent-3 pull-left mr-2">4</span> Introductory and concluding strategies</p>
-       <p><span class="badge accent-3 pull-left mr-2">5</span> Summary writing</p>
-       <p><span class="badge accent-3 pull-left mr-2">6</span> Analytic strategies</p>
-       <p><span class="badge accent-3 pull-left mr-2">7</span> Persuasive strategies</p>
-       <p><span class="badge accent-3 pull-left mr-2">8</span> Key grammar concepts</p>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">1</span> Identifying purpose, audience, and thesis</p>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">2</span> Paragraph development</p>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">3</span> Types of support</p>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">4</span> Introductory and concluding strategies</p>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">5</span> Summary writing</p>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">6</span> Analytic strategies</p>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">7</span> Persuasive strategies</p>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">8</span> Key grammar concepts</p>
        <ul>
 		   <li>subjects and verbs</li>
            <li>sentence structure</li>
