--- a/module_10/10_summary.html
+++ b/module_10/10_summary.html
@@ -33,12 +33,12 @@
           <div class="animated fadeIn text-bold p-3">
           <h1 class="h1-responsive text-accent-3 animated fadeIn mt-3">Week 10 Summary</h1>
           <p>The process of writing a research paper includes many steps from choosing a topic to revising the final draft.  This week, we looked at the first two steps: choosing a topic and planning the research.</p>
-       <p><span class="badge accent-3 pull-left mr-2">1</span> Choosing a topic:<ul>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">1</span> Choosing a topic:<ul>
 		   <li>Consider ways in which your personal interests and your field of study overlap</li>
            <li>Once a broad topic suggests itself, brainstorm, mapping topics and sub-topics to show potential connections</li>
            <li>Frame your research goals as a question.  Make sure your question avoids the following pitfalls:<ul><li>too broad; too narrow; closed; subjective; leading; multiple</li></ul></li>
        </ul></p>
-       <p><span class="badge accent-3 pull-left mr-2">2</span> Planning the research:<br>An excellent way to make sure you have planned every aspect of your research is to write a proposal that describes what you will do.  This also allows your professor to give you helpful feedback to improve your research results.  A good proposal provides the following:<ul>
+       <p><span class="badge accent-4 pull-left mr-2 black-text">2</span> Planning the research:<br>An excellent way to make sure you have planned every aspect of your research is to write a proposal that describes what you will do.  This also allows your professor to give you helpful feedback to improve your research results.  A good proposal provides the following:<ul>
 		   <li>An informative subject line</li>
            <li>A simple explanation of the research topic</li>
            <li>A discussion of why the research is relevant</li>
